--- a/appcenubbroyler/appcenubbroyler/View/ListViewPage1.xaml
+++ b/appcenubbroyler/appcenubbroyler/View/ListViewPage1.xaml
@@ -17,23 +17,24 @@
             <ListView x:Name="lstStudents"
             ItemsSource="{Binding}"
             ItemSelected="onSelected"
-            CachingStrategy="RecycleElement">
+            SeparatorVisibility="None">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                        <TextCell Text="{Binding Name}" Detail="{Binding Sname}">
+                            <TextCell.ContextActions>
+                                <MenuItem Text="SİL" CommandParameter="{Binding}" 
+                                      IsDestructive="True" Clicked="onDelete"></MenuItem>
+                            </TextCell.ContextActions>
+                        </TextCell>
+                    </DataTemplate>
+                    </ListView.ItemTemplate>
 
-
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextCell Text="{Binding Name}" Detail="{Binding Sname}"  />
-
-                </DataTemplate>
-            </ListView.ItemTemplate>
-
-        </ListView>
-
+                </ListView>
+       
             <StackLayout HorizontalOptions="Center" VerticalOptions="Center"
                    IsVisible="{Binding Source={x:Reference LstPage}, Path=IsBusy}">
                 <Label Text="Loading Data..." TextColor="Silver" HorizontalOptions="Center"></Label>
                 <ActivityIndicator IsRunning="{Binding Source={x:Reference LstPage}, Path=IsBusy}">
-
                 </ActivityIndicator>
             </StackLayout>
         </Grid>
