--- a/appcenubbroyler/appcenubbroyler/View/Insert.xaml
+++ b/appcenubbroyler/appcenubbroyler/View/Insert.xaml
@@ -3,14 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="appcenubbroyler.View.Insert">
 
-
-
     <ContentPage.Content>
         <StackLayout Orientation="Vertical">
+            <Entry x:Name="aa"></Entry>
             <TableView Intent="Form">
                 <TableRoot>
                     <TableSection Title="User Əlavə et">
-                        <EntryCell x:Name="txtName" Label="Ad"></EntryCell>
+                        <EntryCell x:Name="txtName"  Label="Ad"></EntryCell>
                         <EntryCell x:Name="txtSurname" Label="Soyad"></EntryCell>
                         <EntryCell x:Name="txtPhone" Label="Telefon"></EntryCell>
                         <EntryCell x:Name="txtEmail" Label="Email"></EntryCell>
